[feature/SMA-351] Setup Unit test